# ai-experiment-system

./: .gitignore  README.md  docker-compose.yml  test.ipynb  test.py
app/: Dockerfile  pyproject.toml  requirements.txt
app/app/: main.py
app/trainer/: pyproject.toml  requirements.txt
app/trainer/trainer/: __init__.py
app/trainer/trainer/configs/: config.py
app/trainer/trainer/models/: __init__.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/backend/api/: __init__.py  main.py
backend/backend/api/routers/: job.py  statistic.py
backend/backend/trainer/: train.py
backend/backend/trainer/configs/: config.py
backend/backend/trainer/datasets/: mnist.py
backend/backend/trainer/models/: __init__.py  model.py
frontend/: Dockerfile  pyproject.toml  requirements.txt
frontend/frontend/: main.py
server/: pyproject.toml  requirements.txt
server/server/api/: main.py
trainer/trainer/datasets/: mnist.py
trainer/trainer/models/: model.py  statistic.py  trainer.py
