[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.21.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
polars = "^0.20.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
